--- a/style/index.css
+++ b/style/index.css
@@ -1,68 +1,150 @@
-body {
-	overflow: hidden;
-	background: url(/images/base.png) cover no-repeat center center fixed;
-}
-
-.loading {
-	position: absolute;
-	height: 100vh;
-	width: 100vw;
+html {
 	background-color: black;
-	text-align: center;
-	color: white;
-	font-size: 50px;
-}
-
-.loading-div {
-	position: relative;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
-
-.hearthstone-background {
-	background: url(/images/base.png) center center fixed;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-	background-repeat: no-repeat;
 	height: 100vh;
-	z-index: 2;
-}
-
-.cards-container {
-	margin-left: 31.289111389236545%;
-	width: 53.504380475594495%;
-	height: 100vh;
-	position: relative;
-}
-
-.pack {
-	position: absolute;
-	top: 310px;
-	left: 260px;
+	overflow: hidden;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
 	user-select: none;
 }
 
-.pack_open {
-	position: relative;
-	width: 1542px;
-	height: 812px;
-	display: none;
+div, img {
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
-.card-container {
-	width: 170px;
-	height: 252px;
+.wrapper {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	height: 768px;
+	width: 1366px;
+	margin-top: -384px;
+	margin-left: -683px;
+}
+
+.frame {
+	background: url(/images/frame.png);
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	height: 888px;
+	width: 1530px;
+	margin-top: -444px;
+	margin-left: -765px;
+}
+
+.background {
+	background: url(/images/base.jpg) no-repeat center center fixed;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	height: 768px;
+	width: 1366px;
+	margin-top: -384px;
+	margin-left: -683px;
+}
+
+.pack {
+	display: block;
+	position: relative;
+	top: 247px;
+	left: 200px;
+	z-index: 2;
+}
+
+.pack_hover {
+	background: url(/images/base_glow.jpg) no-repeat center center;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	height: 768px;
+	width: 1366px;
+	margin-top: -384px;
+	margin-left: -683px;
+
+}
+
+.pack_hole {
+	position: absolute;
+	top: 260px;
+	left: 707px;
+	height: 212px;
+	width: 155px;
+}
+
+.pack_open {
+	position: absolute;
+	display: none;
+	z-index: 0;
+}
+
+.card_holder {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	height: 768px;
+	width: 1366px;
+	margin-top: -384px;
+	margin-left: -683px;
+}
+
+#card0 {
+	display: block;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-top: -332px;
+	margin-left: 8px;
+}
+
+#card1 {
+	display: block;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-top: -261px;
+	margin-left: -194px;
+}
+
+#card2 {
+	display: block;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-top: -254px;
+	margin-left: 223px;
+}
+
+#card3 {
+	display: block;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-top: 18px;
+	margin-left: -108px;
+}
+
+#card4 {
+	display: block;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-top: 26px;
+	margin-left: 127px;
+}
+
+.card_container {
+	height: 307px;
+	width: 200px;
 	display: inline-block;
 	position: relative;
 	perspective: 800px;
 }
 
 .card {
-	width: 156px;
-	position: absolute;
 	border: none;
 	transform-style: preserve-3d;
 	transition: transform 1s;
@@ -75,42 +157,20 @@ body {
 	backface-visibility: hidden;
 }
 
+.card_glow {
+	position: absolute;
+	top: 43px;
+	left: 27px;
+	height: 215px;
+	width: 145px;
+}
+
 .card .back {
 	transform: rotateY( 180deg );
 }
 
 .card.flipped {
 	transform: rotateY( 180deg );
-}
-
-#card0 {
-	position: relative;
-	top: 181px;
-	left: 110px;
-}
-
-#card1 {
-	position: relative;
-	top: 103px;
-	left: 162px;
-}
-
-#card2 {
-	position: relative;
-	top: 181px;
-	left: 235px;
-}
-
-#card3 {
-	position: relative;
-	top: 493px;
-	left: -45px;
-}
-
-#card4 {
-	position: relative;
-	top: 484px;
-	left: -472px;
 }
 
 .front:hover {
@@ -120,13 +180,13 @@ body {
 .done {
 	background-image: url('../images/done.png');
 	background-repeat: no-repeat;
-	width: 175px;
 	height: 104px;
-	position: relative;
-	top: 110px;
-	left: 310px;
+	width: 175px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-top: -55px;
 	margin-left: 22px;
-	margin-right: -55px;
 	z-index: 5;
 	opacity: 0;
 	display: none;
@@ -137,11 +197,14 @@ body {
 	transition: opacity 1.5s linear;
 }
 
-@media screen and (min-device-width: 1024px) and (max-device-height: 600px) {
-	.pack {
-		position: absolute;
-		top: 200px;
-		left: 100px;
-		user-select: none;
-	}
+.select_expansion {
+	position: absolute;
+	top: 739px;
+	left: 50%;
+	width: 275px;
+}
+
+.select_expansion > select {
+	height: 26px !important;
+	padding: 0;
 }
