--- a/style/index.css
+++ b/style/index.css
@@ -208,3 +208,19 @@ div, img {
 	height: 26px !important;
 	padding: 0;
 }
+
+.loading {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	width: 100vw;
+	transform: translate(-50%, -50%);
+}
+
+.loading-div {
+	text-align: center;
+	background-color: black;
+	color: red;
+	font-weight: bold;
+	font-size: 3em;
+}
